@@ -69,6 +69,11 @@ GNU coreutils NEWS                                    -*- outline -*-
   and encodes and decodes printable text using various common encodings:
   base64,base64url,base32,base32hex,base16,base2,z85.
 
+** Improvements
+
+  stat and tail now know about the "sdcardfs" file system on Android.
+  stat -f -c%T now reports the file system type, and tail -f uses inotify.
+
 
 * Noteworthy changes in release 8.30 (2018-07-01) [stable]
 
